Minor updates to layout.jade and index.jade

--- a/botweb/views/index.jade
+++ b/botweb/views/index.jade
@@ -3,3 +3,18 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  // WRAPPER
+  #wrapper
+
+    // NEWEST LISTING
+    h2 Newest Listing
+    #recruitmentList
+      table
+        thead
+          th Guild Name
+          // fill out the rest of the listing headers here
+          th Contact
+        tbody
+    // /NEWEST Listing
+  // /WRAPPER
