add basic field layout to index

--- a/botweb/views/index.jade
+++ b/botweb/views/index.jade
@@ -15,6 +15,17 @@ block content
           th Guild Name
           // fill out the rest of the listing headers here
           th Contact
+          th Region
+          th Server
+          th Faction
+          th Classes
+          th Raid Type
+          th Raid Times
+          th Current Tier Progress
+          th Discord Link
+          th Website
+          th Short Description (280 characters max)
+          
         tbody
     // /NEWEST Listing
   // /WRAPPER
