--- a/botweb/views/master.dust
+++ b/botweb/views/master.dust
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Call to Arms {+title /}</title>
+    <title>Call to Arms {#title}{.}{/title}</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
   </head>
   <body>
