--- a/botweb/public/stylesheets/style.css
+++ b/botweb/public/stylesheets/style.css
@@ -35,7 +35,9 @@ li.navbar a {
     /*padding: 14px 16px;*/
     text-decoration: none;
 }
-
+ul {
+    list-style-type: none;
+}
 .content {
   padding: 5px;
 }
